crates/ui/tests/snapshots/map_skin__quick_battle_under_the_sprite_skin_with_a_unit_selected.snap
---
source: crates/ui/tests/map_skin.rs
expression: h.snapshot()
---
                                                                      ╔════════════════════════════╗
                                                                      ║ Fort                       ║
                                                                      ║ DEF +2  AVO +20            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ╚════════════════════════════╝
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 arrows move · f move here · d cancel                                                      F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcddddcccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeea
aeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaeeeeeeeea
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:text_dim bg:black
--- overlays ---
under sprite 100,144 24x24  tilesets/test.png 24,24 24x24
under sprite 124,144 24x24  tilesets/test.png 24,24 24x24
under sprite 148,144 24x24  tilesets/test.png 24,24 24x24
under sprite 172,144 24x24  tilesets/test.png 0,24 24x24
under 196,144 24x24  attack_range
under sprite 196,144 24x24  tilesets/test.png 0,24 24x24 opacity=64
under sprite 220,144 24x24  tilesets/test.png 0,0 24x24
under sprite 244,144 24x24  tilesets/test.png 0,0 24x24
under sprite 268,144 24x24  tilesets/test.png 96,0 24x24
under sprite 292,144 24x24  tilesets/test.png 96,0 24x24
under sprite 316,144 24x24  tilesets/test.png 120,0 24x24
under sprite 340,144 24x24  tilesets/test.png 120,0 24x24
under sprite 364,144 24x24  tilesets/test.png 144,0 24x24
under sprite 388,144 24x24  tilesets/test.png 144,0 24x24
under sprite 412,144 24x24  tilesets/test.png 168,0 24x24
under sprite 100,168 24x24  tilesets/test.png 24,24 24x24
under sprite 124,168 24x24  tilesets/test.png 24,24 24x24
under sprite 148,168 24x24  tilesets/test.png 0,24 24x24
under 172,168 24x24  attack_range
under sprite 172,168 24x24  tilesets/test.png 0,24 24x24 opacity=64
under 196,168 24x24  move_range
under sprite 196,168 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 220,168 24x24  attack_range
under sprite 220,168 24x24  tilesets/test.png 0,0 24x24 opacity=64
under sprite 244,168 24x24  tilesets/test.png 24,0 24x24
under sprite 268,168 24x24  tilesets/test.png 24,0 24x24
under sprite 292,168 24x24  tilesets/test.png 24,0 24x24
under sprite 316,168 24x24  tilesets/test.png 96,0 24x24
under sprite 340,168 24x24  tilesets/test.png 96,0 24x24
under sprite 364,168 24x24  tilesets/test.png 144,0 24x24
under sprite 388,168 24x24  tilesets/test.png 144,0 24x24
under sprite 412,168 24x24  tilesets/test.png 144,0 24x24
under 100,192 24x24  attack_range
under sprite 100,192 24x24  tilesets/test.png 24,24 24x24 opacity=64
under sprite 124,192 24x24  tilesets/test.png 0,24 24x24
under 148,192 24x24  attack_range
under sprite 148,192 24x24  tilesets/test.png 0,24 24x24 opacity=64
under 172,192 24x24  move_range
under sprite 172,192 24x24  tilesets/test.png 48,0 24x24 opacity=64
under 196,192 24x24  move_range
under sprite 196,192 24x24  tilesets/test.png 48,0 24x24 opacity=64
under 220,192 24x24  move_range
under sprite 220,192 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 244,192 24x24  attack_range
under sprite 244,192 24x24  tilesets/test.png 24,0 24x24 opacity=64
under sprite 268,192 24x24  tilesets/test.png 24,0 24x24
under sprite 292,192 24x24  tilesets/test.png 0,0 24x24
under sprite 316,192 24x24  tilesets/test.png 0,0 24x24
under sprite 340,192 24x24  tilesets/test.png 96,0 24x24
under sprite 364,192 24x24  tilesets/test.png 96,0 24x24
under sprite 388,192 24x24  tilesets/test.png 0,0 24x24
under sprite 412,192 24x24  tilesets/test.png 0,0 24x24
under 100,216 24x24  move_range
under sprite 100,216 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 124,216 24x24  attack_range
under sprite 124,216 24x24  tilesets/test.png 0,24 24x24 opacity=64
under 148,216 24x24  attack_range
under sprite 148,216 24x24  tilesets/test.png 0,24 24x24 opacity=64
under 172,216 24x24  move_range
under sprite 172,216 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 196,216 24x24  move_range
under sprite 196,216 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 220,216 24x24  move_range
under sprite 220,216 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 244,216 24x24  move_range
under sprite 244,216 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 268,216 24x24  attack_range
under sprite 268,216 24x24  tilesets/test.png 0,0 24x24 opacity=64
under sprite 292,216 24x24  tilesets/test.png 0,0 24x24
under sprite 316,216 24x24  tilesets/test.png 0,0 24x24
under sprite 340,216 24x24  tilesets/test.png 0,0 24x24
under sprite 364,216 24x24  tilesets/test.png 0,0 24x24
under sprite 388,216 24x24  tilesets/test.png 48,24 24x24
under sprite 412,216 24x24  tilesets/test.png 0,0 24x24
under 100,240 24x24  move_range
under sprite 100,240 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 124,240 24x24  move_range
under sprite 124,240 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 148,240 24x24  move_range
under sprite 148,240 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 172,240 24x24  move_range
under sprite 172,240 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 196,240 24x24  move_range
under sprite 196,240 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 220,240 24x24  move_range
under sprite 220,240 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 244,240 24x24  move_range
under sprite 244,240 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 268,240 24x24  attack_range
under sprite 268,240 24x24  tilesets/test.png 0,0 24x24 opacity=64
under sprite 292,240 24x24  tilesets/test.png 0,0 24x24
under sprite 316,240 24x24  tilesets/test.png 168,24 24x24
under sprite 340,240 24x24  tilesets/test.png 168,24 24x24
under sprite 364,240 24x24  tilesets/test.png 168,24 24x24
under sprite 388,240 24x24  tilesets/test.png 168,24 24x24
under sprite 412,240 24x24  tilesets/test.png 0,0 24x24
under 100,264 24x24  move_range
under sprite 100,264 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 124,264 24x24  move_range
under sprite 124,264 24x24  tilesets/test.png 96,0 24x24 opacity=64
under 148,264 24x24  move_range
under sprite 148,264 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 172,264 24x24  move_range
under sprite 172,264 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 196,264 24x24  move_range
under sprite 196,264 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 220,264 24x24  move_range
under sprite 220,264 24x24  tilesets/test.png 48,24 24x24 opacity=64
under 244,264 24x24  move_range
under sprite 244,264 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 268,264 24x24  move_range
under sprite 268,264 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 292,264 24x24  attack_range
under sprite 292,264 24x24  tilesets/test.png 0,0 24x24 opacity=64
under sprite 316,264 24x24  tilesets/test.png 168,24 24x24
under sprite 340,264 24x24  tilesets/test.png 72,0 24x24
under sprite 364,264 24x24  tilesets/test.png 48,24 24x24
under sprite 388,264 24x24  tilesets/test.png 168,24 24x24
under sprite 412,264 24x24  tilesets/test.png 0,0 24x24
under 100,288 24x24  attack_range
under sprite 100,288 24x24  tilesets/test.png 96,0 24x24 opacity=64
under 124,288 24x24  move_range
under sprite 124,288 24x24  tilesets/test.png 96,0 24x24 opacity=64
under 148,288 24x24  move_range
under sprite 148,288 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 172,288 24x24  move_range
under sprite 172,288 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 196,288 24x24  move_range
under sprite 196,288 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 220,288 24x24  move_range
under sprite 220,288 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 244,288 24x24  move_range
under sprite 244,288 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 268,288 24x24  move_range
under sprite 268,288 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 292,288 24x24  attack_range
under sprite 292,288 24x24  tilesets/test.png 0,0 24x24 opacity=64
under sprite 316,288 24x24  tilesets/test.png 168,24 24x24
under sprite 340,288 24x24  tilesets/test.png 72,0 24x24
under sprite 364,288 24x24  tilesets/test.png 72,0 24x24
under sprite 388,288 24x24  tilesets/test.png 168,24 24x24
under sprite 412,288 24x24  tilesets/test.png 0,0 24x24
under sprite 100,312 24x24  tilesets/test.png 96,0 24x24
under 124,312 24x24  attack_range
under sprite 124,312 24x24  tilesets/test.png 120,0 24x24 opacity=64
under 148,312 24x24  move_range
under sprite 148,312 24x24  tilesets/test.png 24,0 24x24 opacity=64
under 172,312 24x24  move_range
under sprite 172,312 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 196,312 24x24  move_range
under sprite 196,312 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 220,312 24x24  move_range
under sprite 220,312 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 244,312 24x24  move_range
under sprite 244,312 24x24  tilesets/test.png 0,0 24x24 opacity=64
under 268,312 24x24  attack_range
under sprite 268,312 24x24  tilesets/test.png 0,0 24x24 opacity=64
under sprite 292,312 24x24  tilesets/test.png 0,0 24x24
under sprite 316,312 24x24  tilesets/test.png 168,24 24x24
under sprite 340,312 24x24  tilesets/test.png 168,24 24x24
under sprite 364,312 24x24  tilesets/test.png 72,24 24x24
under sprite 388,312 24x24  tilesets/test.png 168,24 24x24
under sprite 412,312 24x24  tilesets/test.png 0,0 24x24
under 196,275 14x3  path
under 207,275 27x3  path
under sprite 172,264 24x24  tilesets/test.png 168,72 24x24
over  172,264 24x2  player
over  172,286 24x2  hp_high
under sprite 196,288 24x24  tilesets/test.png 120,96 24x24
over  196,288 24x2  player
over  196,310 24x2  hp_high
under sprite 148,240 24x24  tilesets/test.png 24,48 24x24
over  148,240 24x2  player
over  148,262 24x2  hp_high
under sprite 292,192 24x24  tilesets/test.png 0,72 24x24
over  292,192 24x2  enemy
over  292,214 24x2  hp_high
under sprite 268,240 24x24  tilesets/test.png 0,72 24x24
over  268,240 24x2  enemy
over  268,262 24x2  hp_high
under sprite 268,168 24x24  tilesets/test.png 24,144 24x24
over  268,168 24x2  enemy
over  268,190 24x2  hp_high
under sprite 292,312 24x24  tilesets/test.png 48,96 24x24
over  292,312 24x2  enemy
over  292,334 24x2  hp_high
under sprite 172,288 24x24  tilesets/test.png 48,120 24x24
over  172,288 24x2  player
over  172,310 24x2  hp_high
over  229,271 1x11  path
over  230,272 1x9  path
over  231,273 1x7  path
over  232,274 1x5  path
over  233,275 1x3  path
over  234,276 1x1  path
